# qt6-cicd-example

./: Dockerfile  main.py  pyproject.toml
