[tool.poetry]
name = "fang-cicd-example"
version = "0.1.0"
description = ""
authors = ["Xerrion <lasse@xerrion.dk>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
